css/style.css
/* ... */
.parent-modal-input-item-container.active input, .parent-modal-input-wrapper.active input{
    border: 3px solid #e87b0a !important;
}


.parent-modal-input-container {
    margin-top:10px;
    margin-bottom: 20px;
}
.parent-control-modal-button{
    width:200px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}
.user-account-item-wrapper{
    font-size: 35px;
    color: #f78d0b;
    white-space: nowrap;
}
.user-account-label{
    display: inline-block;
    width: 50%;
    vertical-align: middle;
}
.user-account-value{
    display: inline-block;
    width: 50%;
    vertical-align: middle;
}


.no-background{
    background: none !important;
}
.active-state{
    background: #c81111;
}
.subtitle-container{
    color:#fff;
    font-size:50px;
    bottom:0;
    padding:30px;
    width:60%;
    left:20%;
    font-weight: lighter;
    /*visibility: hidden;*/
    /*transform: translateX(-50%);*/
}
.subtitle-option label {
    margin-bottom: 0;
}
.subtitle-option .magic-radio + label{
    font-size: 30px;
}
.login-page-link {
    color: #ffff00 !important;
}

.vertical-center{
    display: flex;
    flex-direction: column;
    justify-content: center;
}

#sort-modal-container{
    position: fixed;
    left:0;
    top:0;
    width: 100%;
    height: 100%;
    background: #1119;
    display: none;
}
#sort-modal-wrapper{
    position: absolute;
    left: 35%;
    top: 150px;
    font-size: 30px;
    border-radius: 5px;
}
.sort-modal-item {
    padding: 5px 20px;
    border-bottom: 1px solid #ccc;
    transition: all 0.1s;
    border-radius: 5px;
    background-color: #fff;
}
.sort-modal-item.active,.sort-modal-item:hover {
    background: #077b0b;
    color: #fff;
}

.video-info-btns-container{
    font-size: 0;
    width: 80%;
    margin: 0 auto;
}
.video-info-btn {
    vertical-align: middle;
    display: inline-block;
    text-align: center;
    width: 20%;
}
.video-info-icon {
    width: 60px;
    margin: 0 auto;
    height: 60px;
    padding-top: 15px;
    border-radius: 30px;
    transition: all 0.05s;
    border: 3px solid transparent;
    white-space: nowrap;
}
.video-info-icon i{
    color: #fff;
    font-size: 30px;
}
.video-info-btn .video-info-icon.active, .video-info-btn .video-info-icon:hover{
    border:3px solid #f77b05
}
.video-info-icon img {
    height: 30px;
    margin: 0 auto;
    display: inline-block;
}
.no-wrap{
    white-space: nowrap;
}
.btn-wrapper-1{
    width: 50%;
    display: inline-block;
    vertical-align: middle;
}

.inline-block{
    display: inline-block;
}


/*For Subtitle*/
::cue {
    color:#ccc;
}

.video-resolution {
    position: fixed;
    bottom: 20px;
    right: 30px;
    color: #fff;
    font-size: 30px;
    letter-spacing: 3px;
}
.video-loader{
    position:absolute;
    left:0;
    top:0;
    width:100%;
    height: 100%;
    color: #ff4832;
    font-size:25px;
    display:none;
    text-align: center;
}
.video-loader img{
    width: 150px;
    height: 150px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}
.modal-content{
    display:block !important;
    border: 2px solid #988d8d;
    border-radius: 15px;
    overflow: hidden;
    background: #16191E;
}
.modal-dialog {
    position: fixed;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%) !important;
    margin:0 !important;
}
.modal-dialog.modal-lg{
    min-width: 750px;
}
.modal-dialog.modal-xl{
    min-width: 1000px;
}
.video-reconnect-message {
    position: absolute;
    bottom: 20px;
    color: #181819;
    left: 50%;
    width: fit-content;
    transform: translateX(-50%);
    font-size: 35px;
    font-weight: normal;
    letter-spacing: 2.5px;
    display: none;
}
#parent-account-valid-error{
    display:none;
    font-size:20px;
    margin-top:10px;
    color: #f78811;
    white-space: normal;
}
.default-code-container {
    color: #fff;
    font-size: 27px;
}
.default-code-container * {
    font-weight: normal;
    vertical-align: middle;
    display: inline-block;
}
#subtitle-modal-body {
    position: relative;
    min-height: 200px;
    padding-bottom: 100px;
}
#subtitle-modal-body .modal-button-wrapper {
    padding: 0 20px;
    position: absolute;
    left: 20px;
    right: 20px;
    bottom:20px;
}
#app.samsung #subtitle-loader-container {
    display: none;
}
#subtitle-loader-container {
    background: #0c0c0ca1;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    z-index: 2;
}

/* Hide elements with .not-lg class on LG WebOS TVs */
#app.lg .not-lg {
    display: none !important;
}

